# metacritic-game

./: example.json  pyproject.toml  scrape-metacritic.py
.github/workflows/: build-containers.yaml
backend/: Dockerfile  pyproject.toml
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/angular/metacritic/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/angular/metacritic/src/: index.html
frontend/angular/metacritic/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/nextjs/: next.config.js
frontend/src/app/: page.js
frontend/src/app/components/: game-search.jsx  player.jsx
frontend/src/app/views/: home.jsx
helm/templates/: scrape-cronjob.yaml
scraper/: Dockerfile  pyproject.toml  scrape-metacritic.py  scrape_metacritic.py  scrape_metacritic_old.py
