[tool.poetry]
name = "scrape-metacritic"
version = "0.1.0"
description = ""
authors = ["Jack Hildebrandt <jack@jackhil.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
psycopg = { extras = ["binary"], version = "^3.1.18" }
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
